--- a/bibliography.bib
+++ b/bibliography.bib
@@ -73,6 +73,15 @@
     url = {https://www.overleaf.com/read/btpkwnkmyxhz#9fc044}
 }
 
+@book{LC-Galois,
+    author = {L.~Caniglia},
+    title = {{Galois Theory}},
+    publisher = {Manuscript},
+    year = {2024},
+    url = {https://www.overleaf.com/read/cmtnyjfrqdsd#6f99cd}
+}
+
+
 @book{Stevenson1992,
   author    = {Stevenson, Frederick W.},
   title     = {Projective Planes},
